# transduce

./: .gitignore  Cargo.toml  README.md  ci.sh  default.nix  flake.nix  push.sh  result
.github/workflows/: rust.yml
proptest-regressions/: base.txt
src/: base.rs  lib.rs  need-impl-in-alias.rs  print_error.rs  result.rs  test.rs  util.rs
