[package]
name = "transduce"
version = "0.2.1"
authors = ["Will Sturgeon <willstrgn@gmail.com>"]
edition = "2021"
description = "Isomorphic parsing: your code should look like what it parses."
license = "MPL-2.0"
repository = "https://github.com/wrsturgeon/transduce"
readme = "README.md"
keywords = ["parsing", "parser", "types", "logic", "metaprogramming"]
categories = ["parsing", "mathematics", "encoding", "compilers", "data-structures"]
build = "build.rs"

[dependencies]
rsmonad = ">=0.2"

[dev-dependencies]
proptest = ">=1.2.0"

[features]
# default = ["nightly"]
nightly = []
