[package]
name = "transduce"
version = "0.4.1"
authors = ["Will Sturgeon <willstrgn@gmail.com>"]
edition = "2021"
description = "Zero-copy isomorphic parsing: your code should look like what it parses."
license = "MPL-2.0"
repository = "https://github.com/wrsturgeon/transduce"
readme = "README.md"
keywords = ["parsing", "parser", "no_std"]
categories = ["parsing", "no-std", "no-std::no-alloc", "encoding", "compilers"]
build = "build.rs"

[dependencies]
# none

[dev-dependencies]
proptest = ">=1.2.0"

[features]
default = ["alloc"]
alloc = []
